# shade-lang

./: CHANGELOG.md  Makefile  README.md  default.nix  haskmelater.cabal  package.yaml
app/: Main.hs
src/: Parser.hs  Types.hs
src/Syntax/: Parser.hs  TypeDef.hs  Utils.hs
src/TypeChecker/: Infer.hs  ModuleCheck.hs  TIMonad.hs
test/: Main.hs  TestInfer.hs  TestModuleTypeCheck.hs  TestParser.hs
