cabal-version:      3.0
name:               haskmelater
version:            0.1.0.0
synopsis:           ____
-- description:
license:            MIT
license-file:       LICENSE
author:             Akshay Nair
maintainer:         phenax5@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:
        base ^>=4.15.1.0,

library
    import:           warnings
    exposed-modules:
        Parser,
        Types
    -- other-modules:
    -- other-extensions:
    build-depends:   
        megaparsec,
        parser-combinators
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskmelater
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        haskmelater

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite haskmelater-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        hspec,
        megaparsec,
        haskmelater
